# Noises

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat  get_gprof  get_objgraph  num2words  numba  undill
backend/: backend-x86_64-pc-windows-msvc.spec  config.py  cuda_setup.py  main.py  noises_cleanup_marker.txt  requirements.txt
backend/audio/: postprocess.py  utils.py
backend/models/: acestep.py  musicgen.py  stable_audio.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: AudioPlayer.jsx  Button.jsx  Input.jsx  MegaInput.jsx  TitleBar.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: main.rs
