[package]
name = "Noises"
version = "0.1.0"
description = "AI Music Generator"
authors = ["Carl J"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-drag = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

